--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "mkr-earning",
+  "name": "mkr-earning-website",
   "version": "1.0.0",
-  "description": "Watch and Earn Website by MD KAIF RO",
+  "description": "MKR Earning Website Backend for Vercel Deployment",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["earning", "watch", "ads"],
-  "author": "MD KAIF RO",
+  "keywords": [
+    "node",
+    "express",
+    "mongoose",
+    "vercel"
+  ],
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.6.3",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "cors": "^2.8.5"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.0"
   }
 }
